alignment issue solved

--- a/assests/css/styles.scss
+++ b/assests/css/styles.scss
@@ -527,7 +527,7 @@
             &:hover &--item{
                 top: -70%;
                 left: 100%;
-                width: 200px;
+                width: 150px;
                 display: grid;
                 padding: 16px;
                 gap: 16px;
